Downlaod page; dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <link rel="icon" href="%PUBLIC_URL%/img/ollisten-logo-circle-black.png" type="image/png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="%PUBLIC_URL%/img/ollisten-logo-circle-white.png" type="image/png" media="(prefers-color-scheme: dark)">
+    <script>
+      (function() {
+        const faviconLight = '%PUBLIC_URL%/img/ollisten-logo-circle-black.png';
+        const faviconDark  = '%PUBLIC_URL%/img/ollisten-logo-circle-white.png';
+        function setFavicon(href) {
+          document.querySelectorAll('link[rel="icon"]').forEach(el => el.remove());
+          const link = document.createElement('link');
+          link.rel = 'icon';
+          link.type = 'image/png';
+          link.href = href;
+          document.head.appendChild(link);
+        }
+        function updateFavicon() {
+          const isDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+          setFavicon(isDark ? faviconDark : faviconLight);
+        }
+        updateFavicon();
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateFavicon);
+      })();
+    </script>
     <title>Ollisten</title>
   </head>
   <body>
